Bug 1942539: Change new tab to use min-width rather than align-items to center some content while still addressing overflow edge cases.  a=RyanVM
The align-items:center styling was preventing content from stretching to
fill the container in some cases, causing tiles to collapse as noted in
the associated bugzilla bug.

We can't just remove that styling, though, because there are also cases where
`main` has content that's wider than its specified size and expects to be
centered.  So, this patch accounts for that by making `main` at least as wide
as its content, so that wide content remains centered because `main` itself
(which will now grow to fit that content) is centered.

Original Revision: https://phabricator.services.mozilla.com/D235393

Differential Revision: https://phabricator.services.mozilla.com/D235396

--- a/browser/components/newtab/content-src/components/Base/_Base.scss
+++ b/browser/components/newtab/content-src/components/Base/_Base.scss
@@ -32,7 +32,7 @@ main {
   padding: 0;
 
   &.newtab-main {
-    align-items: center;
+    min-width: min-content;
   }
 
   .vertical-center-wrapper {
