--- a/browser/components/newtab/css/activity-stream.css
+++ b/browser/components/newtab/css/activity-stream.css
@@ -474,7 +474,7 @@ main {
   padding: 0;
 }
 main.newtab-main {
-  align-items: center;
+  min-width: min-content;
 }
 main .vertical-center-wrapper {
   margin: auto 0;
